--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       # pwgen -s 50 1
       AUTHENTIK_SECRET_KEY: "uTY56qokCQC76ppJ2dD1EpHFvcwke63k14RiH2SqZ777T4P8IJ"
       AUTHENTIK_ERROR_REPORTING__ENABLED: "true"
+      AUTHENTIK_BOOTSTRAP_PASSWORD: password
     volumes:
       - ./volumes/media/:/media
       - ./volumes/custom-templates/:/templates
